--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,152 @@
     <groupId>MatricesStatistics</groupId>
     <artifactId>MatricesStatistics</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>${project.artifactId}</name>
+    <description>Code base of my learning of concepts</description>
+    <inceptionYear>2014</inceptionYear>
+    <url>https://github.com/vaibhavbarmy/MatricesStatistics</url>
+    <developers>
+        <developer>
+            <id>vaibhavbarmy</id>
+            <name>Vaibhav Agrawal</name>
+            <email>vaibhavbarmy@gmail.com</email>
+            <url>https://github.com/vaibhavbarmy</url>
+            <timezone>+5.5</timezone>
+        </developer>
+    </developers>
+    <contributors>
+        <contributor>
+            <name>!MM()RT@L</name>
+            <email>immoisdevil@gmail.com</email>
+            <timezone>+5.5</timezone>
+        </contributor>
+    </contributors>
 
+    <properties>
+        <scala.version>2.11.0-M8</scala.version>
+        <!--AOP-->
+        <!--<aj.version>1.6.8</aj.version>-->
+    </properties>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>scala</id>
+            <name>Scala Tools</name>
+            <url>http://scala-tools.org/repo-releases/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
+    <repositories>
+        <repository>
+            <id>scala</id>
+            <name>Scala Tools</name>
+            <url>http://scala-tools.org/repo-releases/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-actors-migration</artifactId>
+            <version>2.10.0-M7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-actors</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-convert</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.scalatest</groupId>-->
+        <!--<artifactId>scalatest_2.10</artifactId>-->
+        <!--<version>2.1.0</version>-->
+        <!--</dependency>-->
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>2.15.2</version>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <launchers>
+                        <launcher>
+                            <id>sample3</id>
+                            <mainClass></mainClass>
+                            <args>
+                                <arg>${basedir}</arg>
+                            </args>
+                        </launcher>
+                    </launchers>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Test.*</include>
+                        <include>**/*Suite.*</include>
+                    </includes>
+                </configuration>
+
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.0</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     
 </project>
